footer on student scrum page when unassigned is fix. sticks at bottom. aslo added extra bottom space due to footer being fized at the bottom. adding space would push the response page up so that the save and cancel button are visible to use.

--- a/Capstone-master/Capstone/wwwroot/css/pages-student.css
+++ b/Capstone-master/Capstone/wwwroot/css/pages-student.css
@@ -11,6 +11,9 @@
     width: 100%;
     box-sizing: border-box;
     border-top: 4px solid #A41E35;
+    position: fixed;
+    bottom: 0;
+    z-index: 1000;
 }
 
 html, body {
